test/compile-fail/identifier/use-path-segment-keyword/expected.txt
error: `r#self` cannot be a raw identifier
 --> top.rhdl:2:15
  |
2 |     pub struct r#self {}
  |                ^^^^^^ 
error: `r#self` cannot be a raw identifier
 --> top.rhdl:5:7
  |
5 | use a::r#self;
  |        ^^^^^^ 
